varios fixes
